# meshTools

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  main.py  pyproject.toml  triangulate_test.py
.github/workflows/: format-check.yml
bezier/: CMakeLists.txt  curves.cpp  curves.h
bezierModule/: CMakeLists.txt  module_bezier.cpp
bindings/: CMakeLists.txt
bindings/bezier/: CMakeLists.txt  module_bezier.cpp
bindings/chull/: CMakeLists.txt  module_chull.cpp
bindings/delaunay/: CMakeLists.txt  module_delaunay.cpp
bindings/geometry_mesh/: CMakeLists.txt  module_geometry.cpp  module_mesh.cpp
bindings/noise/: CMakeLists.txt  module_noise.cpp
frost/: main.py
frost/model/: __init__.py  ability.py  action.py  attack_modifier.py  condition.py  element.py  loot.py  monster.py
geometry/: Bbox.cpp  Bbox.h  CMakeLists.txt  Polygon.cpp  Polygon.h  Ray.cpp  Ray.h  Transform.cpp  Vector.cpp  Vector.h  lists.cpp  math.cpp  math.h
mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h
meshMaya/: meshMaya.cpp  meshMaya.h
module/: CMakeLists.txt  module_geometry.cpp  module_mesh.cpp  module_meshMaya.cpp  pyUtils.h
python/: CMakeLists.txt  convexHull.py  flowLoop.py  mesh_maya.py  mesh_maya_scatter.py  mesh_maya_tube.py  module_geometry_tests.py  obb.py  tubeDeformer.py
python/meshTools/: __init__.py  chull.py  delaunay.py  geometry.py  lists.py  mesh.py  noise.py  noise_tabs.py  triangulate.py
python/meshTools/maya/: __init__.py  convex_hull.py  flow_loop.py  mesh.py  obb.py  scatter.py  tube.py  tube_deformer.py
scripts/: format.ps1  format.sh
src/: CMakeLists.txt
src/bezier/: CMakeLists.txt  curves.cpp  curves.h
src/chull/: CMakeLists.txt  chull.cpp  chull.h
src/delaunay/: CMakeLists.txt  delaunay.cpp  delaunay.h
src/geometry/: CMakeLists.txt  bbox.cpp  bbox.h  lists.cpp  lists.h  math.cpp  math.h  polygon.cpp  polygon.h  ray.cpp  ray.h  transform.cpp  transform.h  vector.cpp  vector.h
src/mesh/: CMakeLists.txt  mesh.cpp  mesh.h
src/noise/: CMakeLists.txt  noise.cpp  noise.h  noise_tables.h
tests/: conftest.py  test_bindings_bezier.py  test_bindings_geometry.py  test_bindings_mesh.py  test_chull.py  test_delaunay.py  test_geometry_module.py  test_noise.py  test_triangulate.py
tests/cpp/: CMakeLists.txt  test_bbox.cpp  test_curves.cpp  test_math.cpp  test_ray.cpp  test_transform.cpp  test_vector.cpp
