[build-system]
requires = ["scikit-build-core", "cmake", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "meshtools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[project.optional-dependencies]
maya = []
# Maya is not on PyPI; use meshTools.maya only when running inside Autodesk Maya.

[tool.scikit-build]
wheel.packages = ["python/meshTools"]

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
